--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   @apply btn btn-outline text-lg font-medium text-white md:text-xl w-full border-none bg-pnc hover:bg-pncHover;
 }
 
+.foodHubMainBtn {
+  @apply btn btn-outline text-lg font-medium text-white md:text-xl w-full border-none bg-blue-700 border border-foodHubColor2 hover:bg-foodHubColor2 hover:text-white;
+}
+
 /* General styles for all the titles across the webpage */
 .titles {
   @apply text-pnc text-3xl md:text-4xl font-bold;
